auth group, add libreries
